--- a/app/views/pages/work_with_us.html.erb
+++ b/app/views/pages/work_with_us.html.erb
@@ -93,7 +93,7 @@
       <div class="rounded-borders ">
         <section class="span12 rounded-borders light-shadowed">
           <header class="out rounded-borders-top">
-          <h2>Trabaja con Nosotros</h2>
+          <h2>Trabajá con Nosotros</h2>
           </header>
 
           <div class="wrapper-padding">
@@ -104,7 +104,7 @@
                   <%= form_for @message, :url => pages_contact_path do |form| %>
                     <fieldset>
 
-                      <p>En este momento no tenemos busquedas abiertas. Sin embargo, siempre estamos buscando gente calificada y nos gustaría saber de vos. Completá los campos del formulario para que guardemos tu información.</p>
+                      <p>En este momento no tenemos búsquedas abiertas. Sin embargo, siempre estamos buscando gente calificada y nos gustaría saber de vos. Completá los campos del formulario para que guardemos tu información.</p>
 
                       <hr>
 
