--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
   <script src="/../assets/gmaps4rails/gmaps4rails.googlemaps.js.coffee"></script>
   <script src="/../assets/gmaps4rails/gmaps4rails.mapquest.js.coffee"></script>
   <script src="/../assets/gmaps4rails/gmaps4rails.openlayers.js.coffee"></script>
+  <script src="http://localhost:9292/faye.js"></script>
+  <script src="/../assets/pushNotifications.js"></script>
 
 
 
