Photo upload bug fixed

--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -104,7 +104,7 @@
         <div class="wrapper-padding2">
           <div class="control-group clearfix">
             <label class="pull-left" for="inputEmail">Imagen</label>
-            <%= f.input :photo, :label => false, :input_html => {:class => "pull-right2 input-fullwidth" ,:style => "width: 479px;", :placeholder => "Imagen",:name =>"file"} %>
+            <%= f.input :photo, :label => false, :input_html => {:class => "pull-right2 input-fullwidth" ,:style => "width: 479px;", :placeholder => "Imagen"} %>
           </div>
           <div class="control-group clearfix">
             <label class="pull-left" for="inputEmail">Descripción</label>
