--- a/app/views/users/home_map.erb
+++ b/app/views/users/home_map.erb
@@ -1,6 +1,8 @@
+<div class="container" id="main-content2">
 <%= gmaps("map_options" => {
         "zoom" => 13,
         "center_latitude" => @latitude,
         "center_longitude" => @longitude,
         "auto_adjust" => false,
-}, "markers" => { "data" => @json }) %>
+}, "markers" => { "data" => @json}) %>
+    </div>
