--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -98,7 +98,7 @@
             <div class="wrapper">
               <article class="row-fluid">
                 <div class="span8">
-                  <%= form_for(Message.new(), :url => { :action => "contact_potential_advertiser", :controller => :pages }, :html => { :method => :post }) do |f| %>
+                  <%= form_for(Message.new(), :url => { :action => "contact", :controller => :pages }, :html => { :method => :post }) do |f| %>
                       <fieldset>
                         <p>Por favor, ponete en contacto con nosotros mediante el formulario.</p>
                         <hr>
