--- a/app/views/pages/work_with_us.html.erb
+++ b/app/views/pages/work_with_us.html.erb
@@ -101,7 +101,7 @@
             <div class="wrapper">
               <article class="row-fluid">
                 <div class="span8">
-                  <%= form_for(Message.new(), :url => { :action => "contact_work_with_us", :controller => :pages }, :html => { :method => :post }) do |f| %>
+                  <%= form_for(Message.new(), :url => { :action => "contact_work_with_us", :controller => :pages }, :html => { :method => :post }) do |form| %>
                     <fieldset>
 
                       <p>En este momento no tenemos búsquedas abiertas. Sin embargo, siempre estamos buscando gente calificada y nos gustaría saber de vos. Completá los campos del formulario para que guardemos tu información.</p>
