--- a/app/views/pages/form_company.html
+++ b/app/views/pages/form_company.html
@@ -104,7 +104,7 @@
                 <div class="wrapper">
                     <article class="row-fluid">
                         <div class="span8">
-                            <%= form_for(Message.new(), :url => { :action => "contact_potential_advertiser", :controller => :pages }, :html => { :method => :post }) do |f| %>
+                            <%= form_for(Message.new(), :url => { :action => "contact_potential_advertiser", :controller => :pages }, :html => { :method => :post }) do |form| %>
                             <fieldset>
 
                                 <p>Se parte de DealHunter y suma a tu empresa. Completá los campos del formulario para
