--- a/app/views/pages/form_company.html.erb
+++ b/app/views/pages/form_company.html.erb
@@ -204,12 +204,11 @@
             <div class="span7">
                 <nav>
                     <ul class="inline">
-                        <li><a href="<%= pages_we_path %>">Quiénes Somos</a></li>
-                        <li><a href="<%= pages_work_with_us_path %>">Trabajá con Nosotros</a></li>
-                        <li><a href="<%= pages_form_company_path %>">Alta Empresa</a></li>
-                        <li><a href="#">Términos y Condiciones</a></li>
-                        <li><a href="<%= pages_faqs_path %>">Ayuda</a></li>
-                        <li><a href="#">Contacto</a></li>
+                      <li><a href="<%= pages_we_path %>">Quiénes Somos</a></li>
+                      <li><a href="<%= pages_work_with_us_path %>">Trabajá con Nosotros</a></li>
+                      <li><a href="<%= pages_form_company_path %>">Alta Empresa</a></li>
+                      <li><a href="<%= pages_faqs_path %>">Ayuda</a></li>
+                      <li><a href="<%= pages_contact_path %>">Contacto</a></li>
                     </ul>
                 </nav>
                 <p class="copyright">Copyright © 2013 DealHunter.com. Todos los derechos reservados</p>
