--- a/app/views/pages/we.html.erb
+++ b/app/views/pages/we.html.erb
@@ -67,7 +67,7 @@
               <ul class="inline">
                 <li><a href="<%= pages_we_path %>">Quiénes Somos</a></li>
                 <li><a href="<%= pages_work_with_us_path %>">Trabajá con Nosotros</a></li>
-                <li><a href="<%= pages_form_company_path %>">Alta Empresa</a></li>
+                <li><a href="<%= pages_form_company_path %>">Queres publicar?</a></li>
                 <li><a href="<%= pages_faqs_path %>">Ayuda</a></li>
                 <li><a href="<%= pages_contact_path %>">Contacto</a></li>
               </ul>
