--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -159,6 +159,46 @@
       </div><!--end container-->
     </div><!--end row-->
 
+    <footer id="footer-wrapper" class="dh-footer">
+      <div class="container">
+
+
+        <hr>
+
+        <div id="footer-middle" class="row">
+          <div class="span7">
+            <nav>
+              <ul class="inline">
+                <li><a href="<%= pages_we_path %>">Quiénes Somos</a></li>
+                <li><a href="<%= pages_work_with_us_path %>">Trabajá con Nosotros</a></li>
+                <li><a href="<%= pages_form_company_path %>">Queres publicar?</a></li>
+                <li><a href="<%= pages_faqs_path %>">Ayuda</a></li>
+                <li><a href="<%= pages_contact_path %>">Contacto</a></li>
+              </ul>
+            </nav>
+            <p class="copyright">Copyright © 2013 DealHunter.com. Todos los derechos reservados</p>
+          </div>
+          <div class="span3">
+            <ul id="custumer-support" class="pull-right">
+              <li class="custumer-support-title">Atención al Cliente</li>
+              <li class="telephone-number">0800-111-DEAL(3315)</li>
+              <li class="contact-mail"><a href="#"><i class="icon-contact-mail"></i> info@dealhunter.com</a></li>
+            </ul>
+          </div>
+
+          <div class="span2">
+            <ul class="inline pull-right social">
+              <li><a href="#" target="_blank"><img src="/assets/icon-fb.png"></a></li>
+              <li><a href="https://twitter.com/dealhunterArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
+              <li><a href="#" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
+
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </footer>
+
 
 <% else %>
 
