--- a/app/views/pages/work_with_us.html.erb
+++ b/app/views/pages/work_with_us.html.erb
@@ -178,7 +178,7 @@
               <ul class="inline">
                 <li><a href="<%= pages_we_path %>">Quiénes Somos</a></li>
                 <li><a href="<%= pages_work_with_us_path %>">Trabajá con Nosotros</a></li>
-                <li><a href="<%= pages_form_company_path %>">Alta Empresa</a></li>
+                <li><a href="<%= pages_form_company_path %>">Queres publicar?</a></li>
                 <li><a href="<%= pages_faqs_path %>">Ayuda</a></li>
                 <li><a href="<%= pages_contact_path %>">Contacto</a></li>
               </ul>
@@ -301,7 +301,7 @@
             <div class="wrapper">
               <article class="row-fluid">
                 <div class="span8">
-                  <%= form_for @message, :url => pages_contact_path do |form| %>
+                  <%= form_for(Message.new(), :url => { :action => "contact_work_with_us", :controller => :pages }, :html => { :method => :post }) do |form| %>
                     <fieldset>
 
                       <p>En este momento no tenemos busquedas abiertas. Sin embargo, siempre estamos buscando gente calificada y nos gustaría saber de vos. Completá los campos del formulario para que guardemos tu información.</p>
